--- a/Sayuru.Mobile.API/Sayuru.Mobile.API.csproj
+++ b/Sayuru.Mobile.API/Sayuru.Mobile.API.csproj
@@ -5,13 +5,12 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Sayuru.Mobile.API.Data\Sayuru.Mobile.API.Data.csproj" />
-  </ItemGroup>
-
-  <ItemGroup>
     <PackageReference Include="Swashbuckle.AspNetCore" Version="5.6.3" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
     <PackageReference Include="FirebaseAdmin" Version="2.2.0" />
+     <PackageReference Include="MongoDB.Bson" Version="2.11.5" />
+    <PackageReference Include="MongoDB.Driver" Version="2.11.5" />
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
   </ItemGroup>
 
 
@@ -23,5 +22,7 @@
     <Content Update="sayuru-8e922-firebase-adminsdk-fdaoi-075e80ff63.json">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
+  </ItemGroup>
+  <ItemGroup>
   </ItemGroup>
 </Project>
