--- a/Sayuru.Mobile.API/appsettings.json
+++ b/Sayuru.Mobile.API/appsettings.json
@@ -15,13 +15,14 @@
     "LoggerPath": "Path",
     "IVRAPIBaseURL": "https://sayuru.dialog.lk",
     "IVRAPIUsername": "app_user",
-    "IVRAPIPassword": "F1$#@Ry@pP",
+    "IVRAPIPassword": "$@YuR&@d1@Lo$",
     "FishermanAPIBaseURL": "http://msdfar.com:8080/External/Fisherman/getFishermanByNic.htm",
     "FishermanAPIUsername": "external_user",
-    "FishermanAPIPassword": "Ex?987user",
+    "FishermanAPIPassword": "Dialog#user1234",
     "SMSBaseURL": "https://richcommunication.dialog.lk/api/sms/inline/send",
     "SMSAPIKey": "75b0d5013208a40",
-    "OTPExpiration": 5
+    "OTPExpiration": 5,
+    "AllowedCertificateThumbPrints": "A995868441CD0FE3073D57653A4350878A6B0203"
   },
   "SayuruAPIKey": "ae3d9d0127aa42d493ff7eecf46b2c75"
 }
