--- a/Sayuru.Mobile.API/appsettings.json
+++ b/Sayuru.Mobile.API/appsettings.json
@@ -15,12 +15,12 @@
     "LoggerPath": "Path",
     "IVRAPIBaseURL": "https://sayuru.dialog.lk",
     "IVRAPIUsername": "app_user",
-    "IVRAPIPassword": "$@YuR&@d1@Lo$",
+    "IVRAPIPassword": "-----",
     "FishermanAPIBaseURL": "http://msdfar.com:8080/External/Fisherman/getFishermanByNic.htm",
-    "FishermanAPIUsername": "external_user",
-    "FishermanAPIPassword": "Dialog#user1234",
-    "SMSBaseURL": "https://richcommunication.dialog.lk/api/sms/inline/send",
-    "SMSAPIKey": "75b0d5013208a40",
+    "FishermanAPIUsername": "--------",
+    "FishermanAPIPassword": "-------",
+    "SMSBaseURL": "----",
+    "SMSAPIKey": "-----",
     "OTPExpiration": 5,
     "AllowedCertificateThumbPrints": "A995868441CD0FE3073D57653A4350878A6B0203"
   },
