--- a/Sayuru.Mobile.API/appsettings.json
+++ b/Sayuru.Mobile.API/appsettings.json
@@ -8,15 +8,15 @@
   },
   "AllowedHosts": "*",
   "DatabaseSettings": {
-    "ConnectionString": "mongodb+srv://dbuseradmin:m4lNTUfqi1jBHvL2@samplecluster.l0e70.mongodb.net/SayuruDB?retryWrites=true&w=majority",
+    "ConnectionString": "------",
     "DatabaseName": "SayuruDB"
   },
   "ApplicationSettings": {
     "LoggerPath": "Path",
-    "IVRAPIBaseURL": "https://sayuru.dialog.lk",
-    "IVRAPIUsername": "app_user",
+    "IVRAPIBaseURL": "-----",
+    "IVRAPIUsername": "-----",
     "IVRAPIPassword": "-----",
-    "FishermanAPIBaseURL": "http://msdfar.com:8080/External/Fisherman/getFishermanByNic.htm",
+    "FishermanAPIBaseURL": "------",
     "FishermanAPIUsername": "--------",
     "FishermanAPIPassword": "-------",
     "SMSBaseURL": "----",
